--- a/Keeg.IO/Keeg.IO.csproj
+++ b/Keeg.IO/Keeg.IO.csproj
@@ -40,12 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryReaderEndian.cs" />
+    <Compile Include="BinaryWriterEndian.cs" />
     <Compile Include="NumberHelpers\BitwiseRotate.cs" />
     <Compile Include="NumberHelpers\DoubleUnion.cs" />
     <Compile Include="NumberHelpers\Endian.cs" />
     <Compile Include="NumberHelpers\SingleUnion.cs" />
     <Compile Include="NumberHelpers\Swap.cs" />
+    <Compile Include="Prefix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmallBufferedReader.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
